--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ tmp/
 *~.nib
 local.properties
 .settings/
+*/.settings/
 .loadpath
 .recommenders
 
@@ -35,6 +36,7 @@ local.properties
 
 # PDT-specific (PHP Development Tools)
 .buildpath
+*/.buildpath
 
 # sbteclipse plugin
 .target
@@ -62,7 +64,8 @@ local.properties
 
 # Uncomment this line if you wish to ignore the project description file.
 # Typically, this file would be tracked if it contains build/dependency configurations:
-#.project
+.project
+*/.project
 
 ### Eclipse Patch ###
 # Spring Boot Tooling
